tests/ui/cast/ptr-to-trait-obj-drop-principal.stderr
error[E0606]: casting `*const (dyn Trait + Send + 'static)` as `*const Wrapper<dyn Send>` is invalid
  --> $DIR/ptr-to-trait-obj-drop-principal.rs:18:37
   |
LL | const _: *const Wrapper<dyn Send> = OBJECT as _;
   |                                     ^^^^^^^^^^^
   |
   = note: the trait objects may have different vtables

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0606`.
